fix bugs with design

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,4 +1,4 @@
-en:
+ru:
   admin:
     admins:
       index:
@@ -15,6 +15,8 @@ en:
         back: "Назад"
     tasks:
       index:
+        search: Поиск
+        find: Искать
         name: "Название"
         action: "Действие"
         ask: "Вы уверены?"
@@ -50,14 +52,15 @@ en:
     application:
       admin: "Админ"
       user: "Юзер"
-      out_U: "Выход юзер"
-      out_A: "Выход админ"
+      out: "Выход"
   tasks:
     index:
       start: "Начать"
       name: "Название"
       action: "Действие"
       ask: "Вы уверены?"
+      search: "Поиск"
+      back: "Назад"
     destroy:
       back: "Назад"
       ball: "Набрано балов:"
