added english local

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -63,7 +63,7 @@ ru:
       back: "Назад"
     destroy:
       back: "Назад"
-      ball: "Набрано балов:"
+      ball: "Набрано баллов:"
       ask: "Вопросов больше нет"
     show:
       reply: "Ответить"
@@ -98,4 +98,4 @@ ru:
         passwords: "Забыли пароль?"
         confirmations: "Не получили письмо с подтверждением?"
         unlocks: "Не получили инструкций разблокировки?"
-        log_in_to: "Войти на"
+        log_in_to: "Войти на "
