--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -29,7 +29,7 @@ ru:
       show:
         Taskname: "Имя теста: "
         Question: "Вопрос: "
-        home: "Домой"
+        home: "Назад"
       form:
         name: Название
         close: Закрытый
@@ -63,8 +63,8 @@ ru:
       back: "Назад"
     destroy:
       back: "Назад"
-      ball: "Набрано баллов:"
-      ask: "Вопросов больше нет"
+      ball: "Набрано баллов: "
+      ask: "Вопросов больше нет для теста: "
     show:
       reply: "Ответить"
       title: "Тестирование:"
