update prof and design button

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -53,6 +53,9 @@ en:
       admin: "Admin"
       user: "User"
       out: "Quit"
+    footer:
+      edit: "You can edit your profile "
+      here: "Here"
   tasks:
     index:
       start: "Start"
