--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -86,7 +86,15 @@ ru:
         send_pass: "Выслать пароль"
     registrations:
       edit:
-        #
+        edit: "Редактировать "
+        wait: "Ожидание подтверждения: "
+        leave: "Оставьте поле пустым, если не хотите его менять"
+        confirm: "Нам нужен Ваш текущий пароль, чтобы подтвердить изменения"
+        update: "Обновить"
+        cancel: "Удалить профайл"
+        ask: "Вы уверены?"
+        back: "Назад"
+        unhappy: "Несчастны? "
       new:
         pass: "пароль"
         с_pass: "повторите пароль"
