added devise:mailer and locale

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -72,6 +72,13 @@ en:
       reply: "Reply"
       title: "Testing:"
   devise:
+    mailer:
+      reset_password_instructions:
+        hello: "Hello "
+        link: "Someone has requested a link to change your password. You can do this through the link below."
+        change: "Change my password"
+        not: "If you didn't request this, please ignore this email."
+        createanew: "Your password won't change until you access the link above and create a new one."
     confirmations:
       new:
         send: "Resend verification email"
