--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -72,6 +72,13 @@ ru:
       reply: "Ответить"
       title: "Тестирование:"
   devise:
+    mailer:
+      reset_password_instructions:
+        hello: "Привет "
+        link: "Кто-то запросил изменение пароля. Вы можете изменить пароль по ссылке."
+        change: "Изменить пароль"
+        not: "Если Вы не запрашивали изменения, не обращайте внимания на письмо."
+        createanew: "Ваш пароль не изменится, пока вы не перейдете по ссылке выше."
     confirmations:
       new:
         send: "Отправить повторно письмо с подтверждением"
