style and size for img,

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -41,6 +41,7 @@ en:
         Taskname: "Task name: "
         Question: "Question: "
         home: "Back"
+        edit: "Edit"
       form:
         name: "Name"
         close: "Close"
