added will_paginate and fixed style in admin/tasks/edit|create/:id

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,4 +1,7 @@
 en:
+  will_paginate:
+    previous_label: "Previous"
+    next_label: "Next"
   end_time: "End time"
   fin: "Test is finished"
   al_fin: "Test already finished"
