--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -72,6 +72,15 @@ ru:
         noo: "нет"
         yess: "да"
   layouts:
+    admin:
+      out: "Выход"
+    admin_menu:
+      asked: "Вопросы"
+      result: "Результаты"
+      home: "Домой"
+    user_menu:
+      asked: "Вопросы"
+      result: "Результаты"
     application:
       admin: "Админ"
       user: "Юзер"
@@ -149,3 +158,7 @@ ru:
         confirmations: "Не получили письмо с подтверждением?"
         unlocks: "Не получили инструкций разблокировки?"
         log_in_to: "Войти на "
+  results:
+    index:
+      test_name: "Названние теста"
+      mark_type: "Оценка"
