--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -60,10 +60,10 @@ en:
       question_fields:
         question: "Question"
         add_answer: "Add answer"
-        remove: "Add question"
+        remove: "Remove question"
       answer_fields:
         remove: "Remove answer"
-        correct: "Correct"
+        correct: "Correct?"
         answer: "Answer"
         noo: "no"
         yess: "yes"
@@ -158,3 +158,4 @@ en:
     index:
       test_name: "Test name"
       mark_type: "Mark"
+      admin_name: "Autor"
