--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -8,6 +8,7 @@ en:
   admin:
     results:
       index:
+        test_name: "Test name"
         action: "Action"
         user: "User"
         mark: "Mark"
