--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -8,6 +8,7 @@ ru:
   admin:
     results:
       index:
+        test_name: "Название теста"
         action: "Действие"
         user: "Юзер"
         mark: "Оценка"
