fixed bug affix, form style

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -88,6 +88,7 @@ en:
       here: "Here"
   tasks:
     index:
+      admin_name: "Autor"
       start: "Start"
       name: "Test name"
       action: "Action"
