--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -88,6 +88,7 @@ ru:
       here: "Сдесь"
   tasks:
     index:
+      admin_name: "Автор"
       start: "Начать"
       name: "Название теста"
       action: "Действие"
